# FastAPI-learnCRM

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: config.py  database.py  dependencies.py  main.py
app/models/: __init__.py  academic.py  payment.py  student.py  sync_log.py  user.py
app/routers/: academic_sync.py  auth.py  crm_sync.py  health.py
app/schemas/: academic.py  auth.py  payment.py  student.py  sync_log.py  validators.py
app/services/: academic_service.py  payment_service.py  student_service.py  sync_service.py
app/utils/: logger.py  security.py
tests/: conftest.py  test_academic_sync.py  test_auth.py  test_crm_sync.py  test_jwt_flow.py
