[project]
name = "fastapi-learncrm-backend"
version = "1.0.0"
description = "RESTful API microservice for CRM ↔ Academic System data synchronization"
requires-python = ">=3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
